# AutoStrategizer

./: .gitignore  CMakeLists.txt  README.md  runme.sh
Auto_Strategizer/: autoStrategizer.cpp  autoStrategizer.hpp  auto_s_v0.cpp  main_auto.cpp  test_ops  test_ops_all  topo_dgx  topo_smx
include/: autoStrategyzer.hpp  autoStrategyzer_tools.hpp
src/: CMakeLists.txt  autoStrategyzer.cpp
tests/: .ex.swp  CMakeLists.txt  broadcast_0.x  broadcast_1.cpp  broadcast_1.ll  broadcast_1.x  broadcast_10.cpp  broadcast_10.x  broadcast_11.cpp  broadcast_11.x  broadcast_12.cpp  broadcast_12.x  broadcast_13.cpp  broadcast_13.x  broadcast_14.x  broadcast_15.cpp  broadcast_15.x  broadcast_16.cpp  broadcast_16.x  broadcast_17.cpp  broadcast_17.x  broadcast_18.cpp  broadcast_18.x  gather_0.x  main_auto.cpp  scatter_0.x  scatter_10.cpp  scatter_10.x  scatter_15.cpp  test_0.cpp  test_0.ll  test_0.x  test_1.ll  test_1.x  test_2.cpp  test_3.cpp  test_3.x  test_4.cpp  test_4.x  test_5.x  (+4 more)
tests/Aux/: legacy.cpp  run_all.sh  test_1.cpp  test_10.cpp  test_11.cu  test_12.cpp  test_13.cpp  test_14.cpp  test_15.cpp  test_16.cpp  test_5.cpp  test_7.cpp  test_8.cpp  test_9.cpp  test_nvlink.cpp
tests/Broadcast/: broadcast_13.cpp  broadcast_18.cpp  broadcast_20.cpp  broadcast_21.cpp  broadcast_22.cpp  run_all.sh
tests/D2D/: d2d_test_1.cpp  d2d_test_11.cpp  d2d_test_2.cpp  d2d_test_6.cpp  d2d_test_9.cpp  run_all.sh
tests/Gather/: gather_0.c
tests/Scatter/: scatter_0.c  scatter_10.cpp  scatter_22.cpp
tests/old_tests/: CMakeLists.txt
tests/old_tests/Aux/: auto_s_v0.cpp  run_all.sh  run_one.sh  test_ops  test_ops_all  test_ops_mult
tests/old_tests/Broadcast/: Broadcast_plot.ipynb  CMakeLists.txt  broadcast_0.cpp  broadcast_14.cpp  broadcast_16.cpp  broadcast_19.cpp  broadcast_20.cpp  requirements.txt  run_all.sh
tests/old_tests/D2D/: CMakeLists.txt  D2D_plot_a.ipynb  D2D_plot_b.ipynb  d2d_test_11.cpp  d2d_test_3.cpp  d2d_test_4.cpp  d2d_test_5.cpp  d2d_test_7.cpp  d2d_test_8.cpp  run_all.sh  run_all_2.sh  run_one.sh  run_one_2.sh
tests/old_tests/Gather/: gather_22.cpp
tests/old_tests/Scatter/: run_all.sh  scatter_10.cpp  scatter_22.cpp
